--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,15 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
 exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
+fonttools==4.56.0
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.7
@@ -42,7 +45,9 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mistune==3.1.1
 nbclient==0.10.2
@@ -51,10 +56,13 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
+numpy==2.2.2
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+pillow==11.1.0
 platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
@@ -62,8 +70,10 @@ psutil==6.1.1
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
+pytz==2025.1
 pywin32==308
 pywinpty==2.0.15
 PyYAML==6.0.2
@@ -73,6 +83,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.22.3
+seaborn==0.13.2
 Send2Trash==1.8.3
 six==1.17.0
 sniffio==1.3.1
@@ -85,6 +96,7 @@ tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
+tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
 wcwidth==0.2.13
